fix shadow overflow in footer

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -535,5 +535,5 @@ $et-verticalPadding-headerCell: 8px !default;
 }
 
 .has-footerShadow .et-footer-container {
-	box-shadow: 0 -1px 4px rgba(0, 0, 0, .24);
+	box-shadow: 0 -3px 3px rgba(0, 0, 0, 0.1);
 }
